--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "geocoder": "^0.2.3",
+    "mongoose": "^8.6.4",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   }
 }
